--- a/src/mails/question-reply.ejs
+++ b/src/mails/question-reply.ejs
@@ -51,7 +51,7 @@
 </head>
 <body>
     <main>
-        <h1>Welcome to StudySync</h1>
+        <h1>Welcome to BookedYourProperty</h1>
         <p>Hello, <%= user.name %></p>
         <p>A new reply has been added to your question in the video "<%= title %>."</p>
         <p>Please log in to our website to view the reply and continue the discussion.</p>
