--- a/src/mails/activation-mail.ejs
+++ b/src/mails/activation-mail.ejs
@@ -72,12 +72,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to StudySync</h1>
+        <h1>Welcome to Booking.Com</h1>
         <p>Hello, <%= user.name %></p>
-        <p>Thank you for registering with StudySync. To activate your account, please use the following activation code:</p>
+        <p>Thank you for registering with Booking.Com. To activate your account, please use the following activation code:</p>
         <h1><%= activationCode %></h1>
         <p>Please enter this code on the activation page within the next 5 minutes.</p>
-        <p>If you didn't register for StudySync, please ignore this email.</p>
+        <p>If you didn't register for Booking.Com, please ignore this email.</p>
         <p>Click the button below to take action:</p>
         <a class="button" href="#">Activate Account</a>
         <p>If you have any questions, please contact us at <a href="mailto:yeasinarafat1734@gmail.com">yeasinarafat1734@gmail.com</a>.</p>
